workload/deployment/s2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s2-modeldepot
  namespace: default
spec:
  selector:
    app: s2-modeldepot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
