workload/deployment/s4-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: s4-sensorflood
  namespace: default
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/maxScale: "5"
        autoscaling.knative.dev/target: "1"
        autoscaling.knative.dev/minScale: "1"
    spec:
      schedulerName: scheduler-plugins-scheduler
      containers:
        - image: shrnsubedi/s4-sensorflood:v4
          env:
            - name: CRUNCHER_URL
              value: http://s3-sensorcruncher.default.svc.cluster.local
