workload/deployment/s2-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: s2-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway  # Matches default ingress gateway in Istio
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
