workload/deployment/round-robin.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s1-inference-roundrobin
spec:
  host: s1-inference.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s3-sensorcruncher-roundrobin
spec:
  host: s3-sensorcruncher.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s4-sensorflood-roundrobin
spec:
  host: s4-sensorflood.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s5-audioprocessor-roundrobin
spec:
  host: s5-audioprocessor.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
